Patch for Bug 1277 which preserves whitespace in view mode for Safari 3, FF2 and IE7, while also wrapping properly in FF2 & Safari 3.

--- a/comp/media/css/style.css
+++ b/comp/media/css/style.css
@@ -578,6 +578,16 @@ div.addelement { text-align: right;}
 
 .alertTypeVars { position: absolute; right: 5px; margin-top: 3px; z-index: 1000; }
 
+/***************************************************
+ * VIEW BOXES 
+***************************************************/
+
+pre {
+    white-space: pre-wrap;
+    word-break: normal;
+    white-space: -moz-pre-wrap;
+}
+
 /******************************************************
  * DIFFS                                              *
  ******************************************************/
